--- a/ChatIHM/ChatIHM.csproj
+++ b/ChatIHM/ChatIHM.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -57,22 +60,37 @@
     <Compile Include="ChatroomIHM.Designer.cs">
       <DependentUpon>ChatroomIHM.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainForm.cs">
+    <Compile Include="CustomComponent\MinMaxButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="CustomComponent\MinMaxButton.Designer.cs">
+      <DependentUpon>MinMaxButton.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CustomComponent\ZButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="InscriptionForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
-      <DependentUpon>MainForm.cs</DependentUpon>
+    <Compile Include="InscriptionForm.Designer.cs">
+      <DependentUpon>InscriptionForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TopicForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TopicForm.Designer.cs">
+      <DependentUpon>TopicForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AuthentificationForm.resx">
       <DependentUpon>AuthentificationForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ChatroomIHM.resx">
       <DependentUpon>ChatroomIHM.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainForm.resx">
-      <DependentUpon>MainForm.cs</DependentUpon>
+    <EmbeddedResource Include="InscriptionForm.resx">
+      <DependentUpon>InscriptionForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -83,6 +101,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TopicForm.resx">
+      <DependentUpon>TopicForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
